Fixed alignment of breadcrumbs in user section. refs #450, #456

--- a/less/thulb.less
+++ b/less/thulb.less
@@ -1157,6 +1157,13 @@ a.external-link:after,
 
 .breadcrumb {
   padding: 0;
+  display: flex;
+
+  & > li + li:before {
+    padding: 0 8px;
+    color: #ccc;
+    content: "/";
+  }
 
   a {
     &:extend(.flex-center, .center-text);
